fixed alignment of timeline

--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -157,7 +157,7 @@ body {
   padding-top: 20px;
   padding-bottom: 20px;
   max-width: 1600px;
-  text-align: center;
+
 }
 
 .cardGrid {
